--- a/css/styles.css
+++ b/css/styles.css
@@ -294,6 +294,39 @@ nav[role=navigation] h1 a {
     letter-spacing: -1px;
 }
 
+#reviews-container label {
+  margin-top: 5%;
+  padding: 6px 0;
+  font-size: 1.3vw;
+  display: none;
+  font-weight: 250;
+}
+#reviews-container .input-container {
+  width: 75%;
+  margin : 0 auto;
+}
+#reviews-container input, number, textarea {
+  width: 100%;
+  margin-top: 2%;
+  padding: 6px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+#reviews-container textarea {
+  height: 4em;
+}
+#reviews-container button {
+  background-color: #333;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+  width: 25%;
+  margin: 2%;
+}
+
 #reviews-list {
     min-width: 100%;
     margin: 0;
@@ -333,6 +366,20 @@ nav[role=navigation] h1 a {
     text-align: right;
 }
 
+#offline-status-box {
+    display: none;
+    background-color: #333;
+    font-size: 8pt;
+    letter-spacing: 1px;
+    padding: 1em;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+#offline-status-box p {
+    color: #ff0000;
+}
+
 /* ====================== Media Queries ==================== */
 
 @media screen and (min-width: 400px) {
@@ -359,6 +406,16 @@ nav[role=navigation] h1 a {
 @media screen and (min-width: 600px) {
     .filter-options h2 {
         display: inline;
+    }
+}
+
+@media (min-width: 751px) {
+    #reviews-container .input-container {
+        display: grid;
+        grid-template-columns: 20% 80%;
+    }
+    #reviews-container label {
+        display: block;
     }
 }
 
